[package]
name = "swine"
version = "3.0.0"
authors = ["DeflatedPickle"]
edition = "2018"

[lib]
name = "swine"
crate-type = ["dylib"]

[dependencies]
# Windowing
glutin = "0.20.0"
gl = "0.11.0"
# Physics
# ncollide3d = "0.18.4"
# nalgebra = "0.17.3"
# nphysics3d = "0.10.3"
# Python
# pyo3 = "0.6.0-alpha.4"

[dependencies.pyo3]
version = "0.6.0-alpha.4"
features = ["extension-module"]